--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+::-webkit-scrollbar {
+  @apply w-1.5 pt-10;
+}
+
+::-webkit-scrollbar-track {
+  @apply bg-slate-400;
+}
+
+::-webkit-scrollbar-thumb {
+  @apply bg-gradient-to-b from-slate-700 to-slate-500 dark:bg-gray-700 h-3 rounded-b-full;
+}
+
 .inactive-tabs {
   @apply dark:border-transparent text-gray-500 hover:text-gray-600 dark:text-gray-400 border-gray-100 hover:border-gray-300 dark:border-gray-700 dark:hover:text-gray-300;
 }
